--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,23 @@
   animation: clouds-animation 10s infinite linear;
 }
 
+.jump-button {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.jump-button:hover {
+  background-color: #45a049;
+}
+
 @keyframes pipe-animation {
   from {
     right: -80px;
