--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,29 @@
   }
 }
 
+/* Adiciona keyframes ajustados para dispositivos menores */
+@keyframes jump {
+  0% {
+    bottom: 0;
+  }
+
+  40% {
+    bottom: 150px;
+  }
+
+  50% {
+    bottom: 150px;
+  }
+
+  60% {
+    bottom: 150px;
+  }
+
+  100% {
+    bottom: 0;
+  }
+}
+
 @keyframes pipe-animation {
   from {
     right: -80px;
@@ -90,15 +113,15 @@
   }
 
   40% {
-    bottom: 180px;
+    bottom: 190px;
   }
 
   50% {
-    bottom: 180px;
+    bottom: 190px;
   }
 
   60% {
-    bottom: 180px;
+    bottom: 190px;
   }
 
   100% {
