--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,18 @@
 
 .clouds {
   position: absolute;
-  width: 550px;
+  width: 100%; /* Alterado para ocupar 100% da largura da tela */
   animation: clouds-animation 10s infinite linear;
 }
 
 .jump-button-container {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 5%; /* Alterado para ajustar percentualmente conforme a tela */
+  right: 5%; /* Alterado para ajustar percentualmente conforme a tela */
 }
 
 .jump-button {
   padding: 15px 20px;
-
   font-size: 18px;
   background-color: #4caf50;
   color: white;
@@ -70,37 +69,47 @@
     padding: 10px 15px;
     font-size: 16px;
   }
+
+  .pipe {
+    position: absolute;
+    bottom: 0;
+    width: 40px;
+    animation: pipe-animation 1.5s infinite linear;
+  }
+
+  @keyframes jump {
+    0% {
+      bottom: 0;
+    }
+
+    40% {
+      bottom: 90px;
+    }
+
+    50% {
+      bottom: 70px;
+    }
+
+    60% {
+      bottom: 90px;
+    }
+
+    100% {
+      bottom: 0;
+    }
+  }
 }
 
-@keyframes jump {
-  0% {
-    bottom: 0;
-  }
-
-  40% {
-    bottom: 150px;
-  }
-
-  50% {
-    bottom: 150px;
-  }
-
-  60% {
-    bottom: 150px;
-  }
-
-  100% {
-    bottom: 0;
-  }
-}
-
-/* Adiciona estilos ao contador de pulos */
 .jump-counter {
   position: fixed;
-  bottom: 50px;
-  right: 20px;
-  font-size: 18px;
+  bottom: 5%; /* Alterado para ajustar percentualmente conforme a tela */
+  left: 5%; /* Alterado para ajustar percentualmente conforme a tela */
+  font-size: 24px;
   color: #333;
+  background-color: #4caf50;
+  padding: 5px 10px;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 @keyframes pipe-animation {
@@ -137,7 +146,7 @@
 
 @keyframes clouds-animation {
   from {
-    right: -550;
+    right: -100%; /* Alterado para iniciar fora da tela */
   }
 
   to {
